namespaces/phpmyadmin/svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: main
  labels:
    app: main
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: main
